@@ -1,8 +1,6 @@
 package com.lego.framework.core.utils;
-
-import sun.misc.BASE64Encoder;
-
 import java.security.MessageDigest;
+import java.util.Base64;
 import java.util.Random;
 
 /**
@@ -44,8 +42,8 @@ public class SecurityUtils {
         String cipherText;
         try {
             MessageDigest md5 = MessageDigest.getInstance("MD5");
-            BASE64Encoder base64en = new BASE64Encoder();
-            cipherText = base64en.encode(md5.digest(clearText.getBytes("utf-8")));
+            Base64.Encoder base64en=Base64.getEncoder();
+            cipherText = base64en.encodeToString(md5.digest(clearText.getBytes("utf-8")));
         } catch (Exception e) {
             throw new RuntimeException("加密失败[clearText: " + clearText + "]");
         }
